--- a/templates/crowdfunding/admin.html
+++ b/templates/crowdfunding/admin.html
@@ -345,7 +345,7 @@
 {% block extrascripts %}
     <script type="text/javascript" src="{% static "dist/js/jquery.countdown.min.js" %}"></script>
     {% compress js %}
-        <script type="text/javascript" src="{% static "dist/js/cardcreator.js" %}"></script>
+        <script type="text/javascript" src="{% static "dist/js/cardcreator.js" %}?v=1.0.1"></script>
         <script type="text/javascript">
             {% if crowdfund.end_date %}
             var countdown_time = moment('{{ crowdfund.end_date|date:"Y/m/d" }}').format("YYYY/MM/DD HH:mm");
