[CHANGED] All cards spacing to 15px

--- a/templates/crowdfunding/index.html
+++ b/templates/crowdfunding/index.html
@@ -47,7 +47,7 @@
         </div>
     </div>
     <div class="row">
-        <div class="col-md-4">
+        <div class="col-md-4 no-right-padding">
             <div class="box box-solid" style="min-height: 300px">
                 <div class="box-body">
                     {% if crowdfund %}
