--- a/templates/crowdfunding/admin.html
+++ b/templates/crowdfunding/admin.html
@@ -63,7 +63,7 @@
         </div>
     </div>
     <div class="row" style="margin-top: 15px">
-        <div class="col-md-4">
+        <div class="col-md-4 no-right-padding">
             <div class="box box-solid" style="min-height: 300px">
                 <div class="box-body">
                     {% if crowdfund %}
