--- a/templates/crowdfunding/public_index.html
+++ b/templates/crowdfunding/public_index.html
@@ -14,6 +14,7 @@
             margin-top: 50px;
             padding-left: 50px;
             padding-right: 50px;
+			background-color: #F9F9F9;
         }
 		@media (max-width: 767px) {
 			.content {
