[ADDED] Fade in/out to share buttons

--- a/templates/base.html
+++ b/templates/base.html
@@ -478,6 +478,8 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-slider/9.5.3/bootstrap-slider.min.js"></script>
     <!-- File Saver -->
     <script src="{% static "plugins/filesaver/FileSaver.min.js" %}"></script>
+    <!-- Clip Board -->
+    <script src="{% static "plugins/clipboard/clipboard.min.js" %}"></script>
     {% compress js %}
     <script type="text/javascript">
         var convertEmojis = function (single) {
