--- a/templates/landing_base.html
+++ b/templates/landing_base.html
@@ -256,6 +256,7 @@
 		<script src="{% static "dist/js/jquery.singlePageNav.min.js" %}"></script>
     	<script src="{% static "dist/js/bootstrap-notify.js" %}"></script>
 		<script src="{% static "dist/js/custom.js" %}"></script>
+	    <script src="{% static "plugins/clipboard/clipboard.min.js" %}"></script>
 		{% compress js %}
 		<script type="text/javascript">
 			function getCookie(name) {
