--- a/templates/crowdfunding/admin.html
+++ b/templates/crowdfunding/admin.html
@@ -54,7 +54,7 @@
                     <button class="btn btn-rounded" data-toggle="modal" data-target="#paymentAmountModal">{% trans "Add Payment Amount" %}</button>
                     <button class="btn btn-rounded" data-toggle="modal" data-target="#updateCrowdfundModal">{% trans "Update Crowdfund" %}</button>
                     <button class="btn btn-rounded" data-toggle="modal" data-target="#cardCreatorModal">{% trans "Add New Card" %}</button>
-                    <button class="btn btn-rounded" data-toggle="modal" data-target="#metaEditorModal">{% trans "Add Meta Tags" %}</button>
+                    <button class="btn btn-rounded" data-toggle="modal" data-target="#metaEditorModal">{% trans "Edit Meta Tags" %}</button>
                 {% else %}
                     <button class="btn btn-rounded" id="startnew">{% trans "Start a crowdfund" %}</button>
                 {% endif %}
@@ -210,7 +210,7 @@
     <div class="modal-content">
       <div class="modal-header">
         <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-        <h4 class="modal-title" id="">{% trans "Add a amount to payment form dropdown" %}</h4>
+        <h4 class="modal-title" id="">{% trans "Set a default payment amount" %}</h4>
       </div>
       <div class="modal-body">
           {% include "crowdfunding/paymentamountform.html" %}
