--- a/templates/sidebar_group.html
+++ b/templates/sidebar_group.html
@@ -13,18 +13,10 @@
 </li>
 {% endif %}
 {% if 'can_read_post' in group_perms %}
-<li class="treeview {% active request 'g:adminposts' group.id %} {% active request 'g:memberposts' group.id %}">
-    <a href="#">
-        <i class="fa fa-edit"></i>
-        <span>{% trans "Posts" %}</span>
-        <span class="pull-right-container">
-            <i class="fa fa-angle-left pull-right"></i>
-        </span>
+<li class="treeview {% active request 'g:posts' group.id %}">
+    <a href="{% url 'g:posts' group.id %}">
+        <i class="fa fa-edit"></i><span>{% trans "Posts" %}</span>
     </a>
-    <ul class="treeview-menu">
-        <li class="{% active request 'g:adminposts' group.id %}"><a href="{% url 'g:adminposts' group.id %}"><i class="fa fa-circle-o"></i>{% trans "Group's Posts" %}</a></li>
-        <li class="{% active request 'g:memberposts' group.id %}"><a href="{% url 'g:memberposts' group.id %}"><i class="fa fa-circle-o"></i>{% trans "Member's Posts" %}</a></li>
-    </ul>
 </li>
 {% endif %}
 {% if 'can_access_admin' in group_perms %}
